--- a/data_integrity_check.ipynb
+++ b/data_integrity_check.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# data integrity check"
+    "# Data Integrity Check and Comparison"
    ]
   },
   {
@@ -20,7 +20,8 @@
     }
    },
    "source": [
-    "## 1. Connect to the database:"
+    "## 1. Connect to the database:\n",
+    "Connect to the database using SQLite"
    ]
   },
   {
@@ -35,16 +36,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Check the tables in the database"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
+   "execution_count": 130,
    "outputs": [
     {
      "data": {
       "text/plain": "  id                 name_dba                 name_aka license_id  \\\n0  0     #1 CHINA EXPRESS LTD    #1 CHINA EXPRESS  LTD    1869616   \n1  1             #1 CHOP SUEY             #1 CHOP SUEY    2042372   \n2  2             #1 CHOP SUEY             #1 CHOP SUEY    1970042   \n3  3  #1 CHOP SUEY RESTAURANT  #1 CHOP SUEY RESTAURANT    1739799   \n4  4              #1 DELI INC              31 DELI INC    2501188   \n\n  facility_type                address    zip  \n0    restaurant   4248 S WENTWORTH AVE  60609  \n1    restaurant         1907 W 87TH ST         \n2    restaurant  4307 W IRVING PARK RD  60641  \n3    restaurant  4307 W IRVING PARK RD  60641  \n4       grocery     6901 S NORMAL BLVD  60621  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>name_dba</th>\n      <th>name_aka</th>\n      <th>license_id</th>\n      <th>facility_type</th>\n      <th>address</th>\n      <th>zip</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>#1 CHINA EXPRESS LTD</td>\n      <td>#1 CHINA EXPRESS  LTD</td>\n      <td>1869616</td>\n      <td>restaurant</td>\n      <td>4248 S WENTWORTH AVE</td>\n      <td>60609</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>#1 CHOP SUEY</td>\n      <td>#1 CHOP SUEY</td>\n      <td>2042372</td>\n      <td>restaurant</td>\n      <td>1907 W 87TH ST</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>#1 CHOP SUEY</td>\n      <td>#1 CHOP SUEY</td>\n      <td>1970042</td>\n      <td>restaurant</td>\n      <td>4307 W IRVING PARK RD</td>\n      <td>60641</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>#1 CHOP SUEY RESTAURANT</td>\n      <td>#1 CHOP SUEY RESTAURANT</td>\n      <td>1739799</td>\n      <td>restaurant</td>\n      <td>4307 W IRVING PARK RD</td>\n      <td>60641</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>#1 DELI INC</td>\n      <td>31 DELI INC</td>\n      <td>2501188</td>\n      <td>grocery</td>\n      <td>6901 S NORMAL BLVD</td>\n      <td>60621</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 64,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +63,13 @@
    "source": [
     "facility_test = pd.read_sql_query('select * from facility limit 5;', con)\n",
     "facility_test"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -76,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -84,13 +101,13 @@
       "text/plain": "  code   level\n0    0     All\n1    1    High\n2    2  Medium\n3    3     Low",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>code</th>\n      <th>level</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>All</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>High</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>Medium</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>Low</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 66,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "risk_test = pd.read_sql_query('select * from risk limit 5;', con)\n",
+    "risk_test = pd.read_sql_query('select * from risk;', con)\n",
     "risk_test"
    ]
   },
@@ -216,7 +233,7 @@
     }
    },
    "source": [
-    "load the original data"
+    "First, we need to load the original data."
    ]
   },
   {
